<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chern.exe2202a.MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginVertical="10dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/dir_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_1_dir"
                android:inputType="text|textPersonName"
                android:textColor="@android:color/darker_gray" />

            <EditText
                android:id="@+id/dir_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_2_dir"
                android:inputType="text|textPersonName"
                android:textColor="@android:color/darker_gray" />

            <EditText
                android:id="@+id/dir_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_3_dir"
                android:inputType="text|textPersonName"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/hint_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="0dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/act_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_save" />

                <Button
                    android:id="@+id/act_read"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_read" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/output_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </ScrollView>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
